--- a/src/components/CountFeedback/CountFeedback.module.css
+++ b/src/components/CountFeedback/CountFeedback.module.css
@@ -4,6 +4,10 @@
   padding: 30px;
   margin: 0 auto;
   max-width: 1200px;
+  justify-content: center;
+  align-items: center;
+  font-size: 40;
+  color: #010101;
 }
 
 .title {
